# convertifyfm-fullproject

./: README.md
backend/: manage.py  pyproject.toml  requirements.txt
backend/backend/: api.py  helpers.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
backend/backend/migrations/: 0001_initial.py  0002_auto_20230207_1137.py
backend/convertifyfm/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .gitignore
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
frontend/src/components/: BaseForm.jsx  ErrorMessage.jsx  Loader.jsx  Nav.js  NavItem.js  NavLogin.js  PageDescription.jsx  PlaylistForm.js  ResultsButtons.jsx  ResultsTracks.jsx  ScrollButtons.jsx  SearchButton.jsx  SearchResults.jsx  SubmitPlaylistForm.js  TrackCard.css  TrackCard.js
frontend/src/pages/: NotFound.jsx
frontend/src/pages/Lastfm/: TimePeriodChart.jsx  TopTracks.jsx
frontend/src/pages/Spotify/: Home.jsx  TextConverter.jsx  TopTracks.jsx
frontend/src/services/: fetchData.js  helperFunctions.js
frontend/src/utils/: AuthContext.js  fetch.js  helpers.js  hooks.js
frontend/src/utils/api/: lastfmAPI.js  spotifyAPI.js
